crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__while_loop_carries_locals_through_a_header_phi.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn sum(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:20
    v2 = const.int 0  ; int
    ; stmt s1 @5:5-5:16
    v3 = const.int 0  ; int
    ; stmt s2 @6:5-9:6
    jump bb1
  bb1:
    v4 = phi [bb0: v2, bb2: v7]  ; int
    v5 = phi [bb0: v3, bb2: v9]  ; int
    v6 = lt v5, v1  ; bool
    branch v6 -> bb2 (e0), bb3 (e1)
  bb2:
    ; stmt s3 @6:21-9:6
    ; stmt s4 @7:7-7:28
    v7 = add v4, v5  ; int
    ; stmt s5 @8:7-8:19
    v8 = const.int 1  ; int
    v9 = add v5, v8  ; int
    safepoint
    jump bb1
  bb3:
    ; stmt s6 @10:5-10:19
    return v4
}
