crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__writing_a_string_local_to_a_property_retains_it_before_releasing_the_old_value.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @7:5-7:26
    v1 = new Foo() ! bb1  ; object
    ; stmt s1 @8:5-8:22
    v2 = const.str "hi"  ; string
    ; stmt s2 @9:5-9:21
    retain v2
    v3 = field.get v1, Foo::name  ; string
    release v3
    field.set v1, Foo::name, v2
    release v1
    release v2
    release v0
    return
  bb1:
    release v0
    propagate "m() at t.mwl:7"
}
