crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__writing_an_element_through_a_property_base_stores_the_result_back.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @5:5-5:24
    v1 = field.get v0, T::rows  ; array
    v2 = const.int 0  ; int
    v3 = helper.int_to_string v2  ; string
    v4 = const.int 5  ; int
    v5 = array.set v1, v3, v4  ; array
    field.set v0, T::rows, v5
    release v0
    return
}
