crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__writing_through_this_lowers_too.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @5:5-5:25
    v1 = const.str "new"  ; string
    v2 = field.get v0, T::name  ; string
    release v2
    field.set v0, T::name, v1
    return
}
